# ion-succinct

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  succinct.json
circuits/: main.rs  v1.rs
contracts/: deploy.sh  request.sh
contracts/script/: IonOracleV1.s.sol  SwellProvider.s.sol  deploy.sh
contracts/src/: IonOracleV1.sol  SwellProvider.sol
fixtures/: v1_slot_7347743.json
swell/: package.json  remappings.txt
swell-circuits/: main.rs
swell-circuits/src/: main.rs
swell-ts/: .env  README.md  package.json
swell-ts/src/: index.ts
swell/script/: Counter.s.sol
swell/src/download/Address.sol/: Address.json
swell/src/download/AddressUpgradeable.sol/: AddressUpgradeable.json
swell/src/download/Base.sol/: CommonBase.json  ScriptBase.json  TestBase.json
swell/src/download/Counter.s.sol/: CounterScript.json
swell/src/download/Counter.sol/: Counter.json
swell/src/download/Counter.t.sol/: CounterTest.json
swell/src/download/EnumberableSetValidatorDetails.sol/: EnumberableSetValidatorDetails.json
swell/src/download/EnumerableSetUpgradeable.sol/: EnumerableSetUpgradeable.json
swell/src/download/IAccessControlEnumerableUpgradeable.sol/: IAccessControlEnumerableUpgradeable.json
swell/src/download/IAccessControlManager.sol/: IAccessControlManager.json
swell/src/download/IAccessControlUpgradeable.sol/: IAccessControlUpgradeable.json
swell/src/download/IDepositManager.sol/: IDepositManager.json
swell/src/download/IERC20.sol/: IERC20.json
swell/src/download/IERC20Permit.sol/: IERC20Permit.json
(+27 files in other folders)
