[package]
name = "plonky2x-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/referenxce/manifest.html

[dependencies]
ethers = "2.0.9"
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false}
# plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "john/add-keccak256" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git", branch = "john/get-beacon-validator" }
dotenv = "0.15.0"
env_logger = "0.10.0"

[[bin]]
name = "swell-circuits"
path = "swell-circuits/src/main.rs"

[dev-dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", features = ["gate_testing"]}
